# vcpkg_test

./: .gitignore  CMakeLists.txt
cmake_install-debug-visual-studio-x86-shared/include/foo/: library.h
source/: library.cpp
